--- a/index.css
+++ b/index.css
@@ -30,10 +30,12 @@ header{
 }
 
 header h1{
-    font-size: 2.5rem;
+    font-size: 2.7rem;
     font-weight: 300;
-    color: var(--gray);
+    color: #FFD306;
     margin-bottom: 1rem;
+    font-style: oblique;
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 #new-task-form{
@@ -51,7 +53,7 @@ input, button{
     flex: 1 1 0%;
     background-color: var(--darker);
     padding: 1rem;
-    border-radius: 1rem;
+    border-radius: 20rem;
     margin-right: 1rem;
     margin-left: 1rem;
     color: var(--light);
@@ -66,8 +68,8 @@ input, button{
     color: var(--pink);
     font-size: 1.25rem;
     font-weight: 700;
-    background-image: linear-gradient(to right, var(--pink),
-    var(--purple));
+    background-image: linear-gradient(to right, #FFD306,
+    #FF5809);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     cursor: pointer;
@@ -147,8 +149,8 @@ main{
 }
 
 .task .actions .edit{
-    background-image: linear-gradient(to right, var(--pink),
-    var(--purple));
+    background-image: linear-gradient(to right, #FFD306,
+    #FF5809);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
